--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -67,7 +67,13 @@
     "finish-btn": "Calcular y finalizar",
     "dashboard-btn": "Ir al panel",
     "toast-complete": "¡Configuración completa!",
-    "toast-complete-desc": "Redirigiendo a tu panel."
+    "toast-complete-desc": "Redirigiendo a tu panel.",
+    "error-name-min": "El nombre debe tener al menos 4 caracteres.",
+    "error-age-integer": "La edad debe ser un número entero.",
+    "error-height-integer": "La altura debe ser un número entero.",
+    "error-height-range": "La altura debe estar entre 100 y 230 cm.",
+    "error-weight-decimal": "El peso debe ser un número válido.",
+    "error-weight-range": "El peso debe estar entre 30 y 250 kg."
   },
   "auth": {
     "login-title": "¡Bienvenido de Nuevo!",
