--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -73,7 +73,8 @@
     "error-height-integer": "Height must be a whole number.",
     "error-height-range": "Height must be between 100 and 230 cm.",
     "error-weight-decimal": "Weight must be a valid number.",
-    "error-weight-range": "Weight must be between 30 and 250 kg."
+    "error-weight-range": "Weight must be between 30 and 250 kg.",
+    "error-goal-weight-range": "Goal weight must be between 30 and 250 kg."
   },
   "auth": {
     "login-title": "Welcome Back!",
